changed font of homepage and nav bar

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -74,7 +74,7 @@ Sidebar navigation style
   color: white;
   display: block;
   transition: 0.3s;
-  font-family: helloFont;
+  font-family: headerFont;
 }
 
 .sidenav a:hover {
